--- a/changeSquareColor.html
+++ b/changeSquareColor.html
@@ -21,7 +21,6 @@
             }
                 return color;
         }
-        var newColor = getRandomColor(); // #E943F0
 
         function createSquare() {  
             var divElement = document.createElement('div')  
@@ -31,6 +30,7 @@
             divElement.style.border = 'solid #0000FF'
             divElement.setAttribute('class', 'quadrado')
             divElement.setAttribute('onmouseover', 'changeColor(this)')
+            // divElement.setAttribute('onmouseleave', 'changeColor(this)')
             document.body.appendChild(divElement)
         }
 
@@ -40,7 +40,8 @@
         }
 
         function changeColor(element) {
-            element.style.backgroundColor = newColor
+            console.log(element.style.backgroundColor)
+            element.style.backgroundColor = getRandomColor()
         }
 
     </script>
