testing git via terminal

--- a/js/module2/fillListWithButton.html
+++ b/js/module2/fillListWithButton.html
@@ -31,7 +31,7 @@
             var text = inputElement.value;
             // create text with value input
             var textElement = document.createTextNode(text)
-
+            // create element tag list
             var itemElement = document.createElement('li')
             listElement.appendChild(itemElement)
             itemElement.appendChild(textElement)
