--- a/js/module2/addRemoveSquare.html
+++ b/js/module2/addRemoveSquare.html
@@ -24,7 +24,12 @@
 
         function eraseSquare() {
             var divElement = document.querySelector('#quadrado')
-            document.body.removeChild(divElement)
+            if (divElement === null) {
+                alert('Não existem quadrados para remover!')
+            } else {
+                document.body.removeChild(divElement)
+            }
+            
         }
     </script>
 </body>
